[package]
name = "proj1"
version = "0.1.0"
authors = ["Koshchiy <a.koshchiy@pixonic.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.2", features = ["yaml"] }

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"