[package]
name = "proj2"
version = "0.1.0"
authors = ["Koshchiy <a.koshchiy@pixonic.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
thiserror = "1.0"
serde = "1"
bson = "2.0.0-beta.3"
walkdir = "2.2.7"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"

#[lib]
#proc-macro = true