[package]
name = "proj3"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
thiserror = "1.0"
serde = "1"
bson = "2.0.0-beta.3"
walkdir = "2.2.7"
sled = "0.34.6"
slog = "2.7.0"
slog-async = "2.7.0"
slog-term = "2.8.0"
byteorder = "1.4.3"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
criterion = "0.3"
rand = "0.6.5"


[[bench]]
name = "engine_bench"
harness = false