[package]
name = "proj5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
thiserror = "1.0"
serde = "1"
bson = "2.0.0-beta.3"
walkdir = "2.2.7"
sled = "0.34.6"
slog = "2.7.0"
slog-async = "2.7.0"
slog-term = "2.8.0"
byteorder = "1.4.3"
rayon = "1.5"
crossbeam = "0.8"
crossbeam-skiplist = { git = "https://github.com/crossbeam-rs/crossbeam.git", branch = "master" }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.2.11"
crossbeam-utils = "0.6.5"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
panic-control = "0.1.4"